# AEGIS

./: .env.example  .gitignore  AEGIS_BRAND.md  AEGIS_RELEASE_POST_v1.6.2.md  AEGIS_RELEASE_POST_v1.6.3.1.md  AEGIS_RELEASE_POST_v1.6.3.md  AEGIS_RELEASE_POST_v1.6.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  ecosystem.config.js
.github/workflows/: ci.yml  release.yml
.well-known/: llms.txt
agent-rust/: Cargo.toml
agent-rust/src/: lib.rs
agent-rust/src/ransomware/: canary.rs  entropy.rs  killer.rs  mod.rs  rollback.rs  selfprotect.rs
agent-rust/tests/: ransomware_emulation.rs  ransomware_unit.rs
backend/: .env.example  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/scripts/: migrate_rules_to_yaml.py  repair_duplicate_assets.py  v1639_smoke.py
backend/tests/: test_campaigns.py  test_correlation_engine_v163.py  test_dashboard_monitored_apps.py  test_dashboard_threat_map.py  test_dos_shield.py  test_firewall_sync_pull.py  test_firewall_sync_reconcile.py  test_incident_enrichment.py  test_ip_blocker_purge.py  test_ip_intel.py  test_ip_intel_confidence.py  test_ip_intel_deep.py  test_ip_intel_history.py  test_log_watcher_dedup.py  (+6 more)
docs/: index.html  robots.txt  sitemap.xml
firewall-agent/: aegis-firewall.service  aegis-init.sh  dos_netshield.py  main.py  rate_limit_rules.example.json  requirements.txt
frontend/: .gitignore  Dockerfile  components.json  next.config.mjs  package.json  playwright.config.ts
pi-deploy/: aegis-honeypot.service  aegis_honeypot.py  web-server-logger.patch.py  web-server-logger.proxy-headers-patch.py  web-server-logger.py
scripts/: dos_hardening.md  gen_diagram.py
(+470 files in other folders)
