[package]
name = "aegis-agent-rust"
version = "0.1.0"
edition = "2021"
description = "AEGIS EDR-lite endpoint agent — Rust prototype"
license = "MIT"

[lib]
name = "aegis_agent"
path = "src/lib.rs"

[[bin]]
name = "aegis-agent-rust"
path = "src/main.rs"

[dependencies]
sysinfo = "0.34"
notify = "7"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
rand = "0.8"

# Workspace-level lint configuration. Suppresses lints that fire in pre-existing
# files (main.rs, discovery.rs, fim.rs, monitor.rs, ransomware_emulation.rs)
# which are out of scope for Phase R-E. New code in src/ransomware/ uses
# inline-format-args natively and does not rely on these suppressions.
[lints.clippy]
uninlined_format_args = "allow"
redundant_closure = "allow"
print_literal = "allow"
while_let_loop = "allow"

[lints.rust]
unused_imports = "allow"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
strip = true        # strip debug symbols
codegen-units = 1   # single codegen unit for better optimization
